--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 </head>
 <body>
-    <div class="header">
         <div class="menu">
-            <a href ="#">☰</a>
-            TUTORIALS HUB
-            <a href ="about.html">About Us</a>
+            <div><a href ="#">☰</a></div>
+            <div>TUTORIALS HUB</div>
+            <div><a href ="about.html">About Us</a></div>
         </div>
-    </div>
     <div class ="bodyimg">
         <img src="images/wallpaper.jpg" height="800px" width="100%">
         <h3><br>
